--- a/style.css
+++ b/style.css
@@ -16,4 +16,106 @@ html { box-sizing: border-box; }
 
 body {
 	background-color: #bdc3c7;
+	font-family: 'Source Sans Pro', sans-serif;
+	color: white;
+	padding: 0;
+	margin: 0;
+}
+
+.jmeno {
+	margin: 0 0 20px 0;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;
+	font-weight: normal;
+	color: #fff;
+}
+
+.profil {
+	background-color: #31363b;
+	max-width: 300px;
+	margin: 20px;
+	box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+}
+
+.obsah {
+	padding: 20px;
+}
+
+.hlavicka{
+	position: relative;
+}
+
+.odkazy {
+	margin: 0;
+}
+
+.odkazy li{
+	display: inline-block;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	text-transform: uppercase;
+	display: block;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+}
+
+
+
+.portfolio,
+.facebook,
+.twitter {
+	padding: 10px;
+	border-top: 1px solid #3f464d;
+	text-align: center;
+}
+
+.portfolio{
+	width: 100%;
+}
+
+.facebook {
+	width: 50%;
+	border-right: 1px solid #3f464d;
+}
+
+.twitter{
+	width: 50%;
+}
+
+
+.portfolio:hover {
+	background-color: #e74c3c
+}
+
+.facebook:hover {
+	background-color: #3b5998
+}
+
+.twitter:hover {
+	background-color: #1da1f2
+}
+
+.foto {
+	width: 300px;
+	position: relative;
+}
+
+.logo{
+	background-color: #b92e81;
+	border-radius: 50%;
+	position: absolute;
+	right: 25px;
+	bottom: -25px;
+	width: 50px;
+	box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+	font-family: 'Montserrat', sans-serif;
 }
